test/files/neg/t1017.check
t1017.scala:3: error: not found: value foo
<x><x><x><x><x><x><x><x><x><x><x><x><x><x><x><x><x><x>{ foo }</x></x></x></x></x></x></x></x></x></x></x></x></x></x></x></x></x></x>
                                                        ^
one error found
